<resources>
    <string name="app_name">Food Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="food_joke">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appatizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="drink">Drink</string>
    <string name="fingerfood">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="fingerFood">Finger Food</string>
    <string name="marinade">Marinede</string>
    <string name="sauce">Sauce</string>
    <string name="diet_type">Diet Type</string>
    <string name="whole30">Whole 30</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketogenic">Katogenic</string>
    <string name="gluten_free">Gluten free</string>
    <string name="apply">Apply</string>
    <string name="let_s_cook">Let\'s cook</string>
    <string name="food_n_recipes">Food \n Recipes</string>
    <string name="search">Search\n</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="okay">Okay</string>
    <string name="recipe_saved">Recipes saved</string>
    <string name="not_found_favorite_recipes">No favorite recipe found</string>
    <string name="delete_favorite_menu">Delete favorite</string>
    <string name="next">Next</string>
    <string name="landing_text_one">With this app you can find over than 5000 recipes</string>
    <string name="landing_text_two">You want like vegan, vegetarian, drinks, snacks etc however you want</string>
    <string name="and_you_can_easily_plan_you_meals">and you can easily plan your meals</string>
    <string name="finish">Finish</string>
    <string name="delete_all">Delete all</string>
    <string name="loaded_from_cache">Loaded from cache</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_delete_all_saved_recipes">Do you want to delete all saved recipes?</string>
    <string name="info_about_this_app">Info About this app</string>
    <string name="about_this_app">About this app</string>
    <string name="this_app_uses_spoonacular_api_service">This app uses spoonacular API service</string>
</resources>