<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_recipes_navigation"
    app:startDestination="@id/landingBeginnerFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.aayar94.foodrecipes.ui.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.aayar94.foodrecipes.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.aayar94.foodrecipes.ui.food_joke.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.aayar94.foodrecipes.ui.recipes.bottom_sheet.RecipesBottomSheet"
        android:label="RecipesBottomSheet" >
        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </dialog>
    <fragment
        android:id="@+id/landingBeginnerFragment"
        android:name="com.aayar94.foodrecipes.ui.landing.LandingBeginnerFragment"
        android:label="fragment_landing_beginner"
        tools:layout="@layout/fragment_landing_beginner" >
        <action
            android:id="@+id/action_landingBeginnerFragment_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </fragment>
</navigation>