<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.overview.OverviewFragment">

    <ImageView
        android:id="@+id/healty_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/glutenfree_imageView"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_textView"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_imageView" />

    <ImageView
        android:id="@+id/vegan_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintEnd_toEndOf="@+id/vegatarian_imageView"
        app:layout_constraintStart_toStartOf="@+id/vegatarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegatarian_imageView" />

    <ImageView
        android:id="@+id/dairyfree_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintEnd_toEndOf="@+id/glutenfree_imageView"
        app:layout_constraintStart_toStartOf="@+id/glutenfree_imageView"
        app:layout_constraintTop_toBottomOf="@+id/glutenfree_imageView" />

    <ImageView
        android:id="@+id/cheap_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintEnd_toEndOf="@+id/healty_imageView"
        app:layout_constraintStart_toStartOf="@+id/healty_imageView"
        app:layout_constraintTop_toBottomOf="@+id/healty_imageView" />

    <TextView
        android:id="@+id/cheap_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Cheap"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

    <ImageView
        android:id="@+id/glutenfree_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/vegatarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegatarian_imageView" />

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/time_TextView"
        app:layout_constraintEnd_toEndOf="@+id/time_TextView"
        app:layout_constraintStart_toStartOf="@+id/time_TextView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/like_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_TextView"
        app:layout_constraintEnd_toStartOf="@+id/time_TextView" />

    <ImageView
        android:id="@+id/like_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toTopOf="@+id/like_TextView"
        app:layout_constraintEnd_toEndOf="@+id/like_TextView"
        app:layout_constraintStart_toStartOf="@+id/like_TextView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/overview_title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:textColor="?attr/colorOnSurface"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView"
        tools:text="@tools:sample/lorem" />

    <ImageView
        android:id="@+id/vegatarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/overview_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/overview_title_textView" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/vegatarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegatarian_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegatarian_imageView" />

    <TextView
        android:id="@+id/glutenfree_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/glutenfree_imageView"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_imageView"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_imageView" />

    <TextView
        android:id="@+id/healty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/healty_imageView"
        app:layout_constraintStart_toEndOf="@+id/healty_imageView"
        app:layout_constraintTop_toTopOf="@+id/healty_imageView" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

    <TextView
        android:id="@+id/dairyfree_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/dairyfree_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairyfree_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairyfree_imageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairyfree_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sumaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>